src/scss/components/landing/background/_background.scss
@import './backdrop/hero/hero';
@import './backdrop/about/about';
@import './backdrop/welcome/welcome';
@import './backdrop/stats/stats';
@import './backdrop/cta/cta';
@import './backdrop/faq/faq';
@import './backdrop/sponsors/sponsors';
@import './backdrop/footer/footer';
@import './footer/footer';

.background__container {
  position: absolute;
  width: 100%;
  z-index: -1;
  overflow: hidden;
}

